--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <li><a href="#" data-page="sobre">Sobre</a></li>
                     <li><a href="#" data-page="servicos">Serviços</a></li>
                     <li><a href="#" data-page="contato">Contato</a></li>
-                    /* <li><a href="#" data-page="map">Mapa</a></li> */
+                    <li><a href="#" data-page="map"></a></li> 
                 </ul>
             </nav>
         `;
