--- a/index.html
+++ b/index.html
@@ -177,6 +177,22 @@
             height: 400px;
             width: 100%;
         }
+
+        .custom-map-control-button {
+            background-color: white;
+            border: 2px solid #4CAF50;
+            border-radius: 3px;
+            box-shadow: 0 2px 6px rgba(0,0,0,.3);
+            cursor: pointer;
+            margin-bottom: 22px;
+            text-align: center;
+            padding: 6px;
+        }
+
+        .custom-map-control-button:hover {
+            background-color: #4CAF50;
+            color: white;
+        }
     </style>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
@@ -248,7 +264,7 @@
             map: {
                 title: "Find Recycling Center",
                 body: [
-                    `<div id="map"></div>`
+                    `<div id="map"></div><div><label for="radius">Radius (meters): </label><input type="number" id="radius" name="radius" value="5000"><button id="searchButton">Search</button></div>`
                 ]
             }
         };
@@ -324,7 +340,8 @@
                             map.setView(pos, 13);
 
                             // Perform nearby search using Overpass API
-                            searchRecyclingCenters(pos, map);
+                            const radius = document.getElementById('radius').value;
+                            searchRecyclingCenters(pos, radius, map);
                         },
                         () => {
                             handleLocationError(true, map.getCenter());
@@ -344,8 +361,8 @@
                     .openOn(map);
             }
 
-            function searchRecyclingCenters(pos, map) {
-                const overpassUrl = `https://overpass-api.de/api/interpreter?data=[out:json];node[amenity=reciclagem](around:15000,${pos[0]},${pos[1]});out;`;
+            function searchRecyclingCenters(pos, radius, map) {
+                const overpassUrl = `https://overpass-api.de/api/interpreter?data=[out:json];node[amenity=reciclagem](around:${radius},${pos[0]},${pos[1]});out;`;
                 
                 axios.get(overpassUrl).then(response => {
                     const data = response.data;
