--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Casa Plastica is dedicated to fighting plastic pollution and promoting sustainability through innovative recycling solutions. Explore our services and initiatives.">
+
     <title>Casa Plastica</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"></noscript>
-    
+
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="map.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -83,7 +84,7 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjAoAGCBYq6grg_aBga7w7DTnOhvCZFI8&libraries=places"></script>
-    <script src="content.js"></script>
+    <!-- <script src="content.js"></script> -->
     <script src="main.js"></script>
     <script src="map.js"></script>
 </body>
