--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="#" data-page="sobre">Sobre</a></li>
                 <li><a href="#" data-page="servicos">Serviços</a></li>
                 <li><a href="#" data-page="contato">Contato</a></li>
-                <li><a href="#" data-page="map-section">Mapa</a></li>
+                <!-- <li><a href="#" data-page="map-section">Mapa</a></li> -->
             </ul>
         </nav>
     </header>
